# LIS-lightning-data-extraction

./: 1_scrape_web.py  2_data_to_csv.py  3_transform-checkpoint.ipynb  3_transform.ipynb  3_transform.py  README-checkpoint.md  README.md  pyproject.toml
